force-app/main/default/objects/Student_Address_Details__c/Student_Address_Details__c.object-meta.xml
<CustomObject>
    <label>Student Address Details</label>
    <nameField>
        <label>Student Address Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students Address Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>