force-app/main/default/objects/Student_Address_Details__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Banswara</fullName>
            </value>
            <value>
                <fullName>Baran</fullName>
            </value>
            <value>
                <fullName>Barmer</fullName>
            </value>
            <value>
                <fullName>Bharatpur</fullName>
            </value>
            <value>
                <fullName>Bhilwara</fullName>
            </value>
            <value>
                <fullName>Bikaner</fullName>
            </value>
            <value>
                <fullName>Bundi</fullName>
            </value>
            <value>
                <fullName>Chittorgarh</fullName>
            </value>
            <value>
                <fullName>Churu</fullName>
            </value>
            <value>
                <fullName>Dausa</fullName>
            </value>
            <value>
                <fullName>Dholpur</fullName>
            </value>
            <value>
                <fullName>Dungarpur</fullName>
            </value>
            <value>
                <fullName>Hanumangarh</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Jaisalmer</fullName>
            </value>
            <value>
                <fullName>Jalore</fullName>
            </value>
            <value>
                <fullName>Jhalawar</fullName>
            </value>
            <value>
                <fullName>Jhunjhunu</fullName>
            </value>
            <value>
                <fullName>Jodhpur</fullName>
            </value>
            <value>
                <fullName>Karauli</fullName>
            </value>
            <value>
                <fullName>Kota</fullName>
            </value>
            <value>
                <fullName>Nagaur</fullName>
            </value>
            <value>
                <fullName>Pali</fullName>
            </value>
            <value>
                <fullName>Pratapgarh</fullName>
            </value>
            <value>
                <fullName>Rajsamand</fullName>
            </value>
            <value>
                <fullName>Sawai Madhopur</fullName>
            </value>
            <value>
                <fullName>Sikar</fullName>
            </value>
            <value>
                <fullName>Sirohi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>