force-app/main/default/objects/Student_Address_Details__c/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <label>Postal Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>